# bg_wkt_benchmark

./: CMakeLists.txt  READMe.md  benchmark.cpp  benchmark_unoptimized.cpp  gen_result.sh
include/: write.hpp
results/: benchmark_bg_wkt_o2.csv  benchmark_bg_wkt_o3.csv  benchmark_bg_wkt_unoptimized.csv
